Add Docker setup and config for FastAPI backend
Introduced docker-compose.yml for local development with a pgvector Postgres database and FastAPI backend. Added .gitignore for build artifacts, updated dependencies in pyproject.toml to include langchain-google-genai, and created src/server/config.py for environment-based configuration management.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "langchain>=0.1.0",
     "langgraph>=0.0.10", # Stateful Agents
     "langchain-openai>=0.0.5",
+    "langchain-google-genai>=4.2.0",
     
     # Client Core
     "textual>=0.47.1",
